# archy-dwm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  archy-dwm.1  config.def.h  config.def.h.orig  config.def.h.rej  config.h  config.mk  dwm  dwm.1  dwm.c  dwm.c.orig  req.md
.github/workflows/: bitbucket-mirror.yml  c-cpp.yml  codeberg-mirror.yml  disroot-mirror.yml  gitdab-mirror.yml  gitea-mirror.yml  gitlab-mirror.yml  mirror.yml  pagure-mirror.yml
keys/: keys.c
layouts/: centeredmaster.c  centeredmaster.h  layouts.h  tile.c
patches/: dwm-bidi-restricted-20230512-e81f17d.diff  dwm-keychain-20200729-053e3a2.diff  dwm-keymodes-20220422.diff
src/: Makefile  actions.h  archy_dwm.c  archy_dwm.h  colors.h  config.def.h  config.def.h.rej  config.h  config.mk  drw.c  drw.h  dwm.c  dwm.c.orig  dwm.c.rej  dwm.h  movestack.c  util.h  yo_dwm.c
src/colors/: defualt.h  dracula.h  gruvbox_dark_hard.h
src/config/: config.h  keys.h  mouse.h
src/keys/: functions.h  keys.c  keys.c.orig  keys.h  mouse.c  mouse.h
src/layouts/: centeredmaster.c  centeredmaster.h  fibonacci.c  grid.c  layouts.h  monocle.c  tile.c
